style: fix mobile visibilty issues

--- a/src/app/styles/aboutMe.css
+++ b/src/app/styles/aboutMe.css
@@ -8,11 +8,14 @@
   max-width: 1300px;
   margin-top: 20px;
   background-color: #333333;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 
 @media (max-width: 768px) {
   .about-me-container {
     flex-direction: column;
+    margin: 10px;
   }
   .about-me-image-container img {
     margin-top: 15px;
@@ -24,7 +27,6 @@
   max-width: 500px;
   border-radius: 10%;
   overflow: hidden;
-  margin-left: 15px;
 }
 
 .text-container {
